--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "prod": "brunch build --production"
   },
   "devDependencies": {
+    "@types/jquery": "^2.0.40",
+    "@types/knockout": "^3.4.39",
     "auto-reload-brunch": "^2.1.0",
     "brunch": "^2.5.3",
     "brunch-typescript": "^1.8.1",
     "uglify-js-brunch": "^2.0.1"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "knockout": "^3.4.1"
   }
 }
