--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uglify-js-brunch": "^2.0.1"
   },
   "dependencies": {
+    "html-pages-brunch": "^2.6.0",
     "jquery": "^3.1.1",
     "knockout": "^3.4.1"
   }
